--- a/GOEDE REQUIREMENTS.html
+++ b/GOEDE REQUIREMENTS.html
@@ -178,11 +178,13 @@ gebruikers</td>
 	</tr>
 	<tr>
 		<td><strong>Description:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">Mogelijkheid om andere gebruikers een beoordeling te geven door
+middel van een sterrenrating. Bij een lage rating wordt er gevraagd om
+een motivatie voor deze rating.</td>
 	</tr>
 	<tr>
 		<td><strong>Rationale:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">Goed gebruik stimuleren</td>
 	</tr>
 	<tr>
 		<td><strong>Originator:</strong></td>
@@ -190,14 +192,15 @@ gebruikers</td>
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">Werkend beoordelingssysteem, waarbij de gemiddelde sterrenrating
+wordt toegevoegd aan het gebruikersaccount.</td>
 	</tr>
 	<tr>
-		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">...</td> 
-		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">...</td> 
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">3</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">4</td> 
 	</tr>
 	<tr>
-		<td><strong>Priority:</strong></td><td colspan="2">...</td>  
+		<td><strong>Priority:</strong></td><td colspan="2">2</td>  
 		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
 	</tr>
 	
@@ -206,17 +209,24 @@ gebruikers</td>
 
 <table> 
 	<tr>
-		<td><strong>Requirement #:</strong></td><td>...</td> 
+		<td><strong>Requirement #:</strong></td><td>6</td> 
 		<td><strong>Requirement type:</strong></td><td>F</td> 
 		<td><strong>Event/Use Case #:</strong></td><td></td> 
 	</tr>
 	<tr>
 		<td><strong>Description:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">Elke gebruiker registreert zich. In het account moet oa. staan:
+●      Bezit van een auto
+●      Verbonden faculteit
+●      Leeftijd
+●      Geslacht
+●      Voorwaarden aan medepassagiers
+●	rekeningnummer
+</td>
 	</tr>
 	<tr>
 		<td><strong>Rationale:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">Alle persoonsgegevens zijn makkelijk verbonden aan een account</td>
 	</tr>
 	<tr>
 		<td><strong>Originator:</strong></td>
@@ -224,19 +234,195 @@ gebruikers</td>
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5">...</td>
+		<td colspan="5">	
+Op de website is een account aan te maken en dit account wordt opgeslagen in onze database. Met dit account heb je toegang tot het
+carpoolplatform</td>
 	</tr>
 	<tr>
-		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">...</td> 
-		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">...</td> 
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
 	</tr>
 	<tr>
-		<td><strong>Priority:</strong></td><td colspan="2">...</td>  
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
 		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
 	</tr>
 	
 </table><br />
 <br />
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>7</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5">De thuislocatie moet aan te kunnen geven zijn op een kaart. Met deze locatie kan een handige route worden bepaald en een mogelijk ander oppikpunt besproken.</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Een efficiënte route plannen</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5">De route van en naar de TUwijk wordt bepaald via de verschillende oppiklocaties	
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>8</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5">Gebruikers hebben een portemonnee in hun account waarin via iDeal
+geld kan worden gestort en ook geld kan worden teruggestort op je verbonden rekening. Dit geld wordt gebruikt om makkelijk de ritkosten te kunnen delen.</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Mogelijk maken om ritkosten te kunnen delen</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5"> Goede integratie met ideal en een beveiligd accountgebonden geld
+systeem, waaruit geld ook weer gestort moet kunnen worden naar de rekening van de chaufeur.
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">4</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>9</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5"> Accountgebonden statistieken maken over het bespaarde CO2 gebruik
 
+door het carpoolsysteem vergeleken met zelf de auto pakken.</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Maatschappelijke relevantie platform laten zien</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5"> 	
+Werkend algoritme die per rit de bespaarde CO2 berekend en toevoegd
+aan de statistieken in het account.
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">3</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">3</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">2</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br /><table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>10</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5">Als iemand gebruik wil maken van het platform moet diegene in zijn account inloggen dmv gebruikersnaam en wachtwoord.</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Toegang krijgen tot je persoonlijke account.</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5"> Een inlogknop op de homepagina waar je na het invullen van je gebruikersnaam en wachtwoord toegang hebt tot je account en het platform.
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>11</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5">Als iemand gebruik wil maken van het platform moet diegene in zijn account inloggen dmv gebruikersnaam en wachtwoord.</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Toegang krijgen tot je persoonlijke account.</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5"> Een inlogknop op de homepagina waar je na het invullen van je gebruikersnaam en wachtwoord toegang hebt tot je account en het platform.
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
 
 <script type="text/javascript" src="/d2l/common/math/MathML.js?v=10.8.5.12965-31 "></script><script type="text/javascript">document.addEventListener('DOMContentLoaded', function() { D2LMathML.DesktopInit('https://s.brightspace.com/lib/mathjax/2.6.1/MathJax.js?config=MML_HTMLorMML','https://s.brightspace.com/lib/mathjax/2.6.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML'); });</script></body></html>
