--- a/GOEDE REQUIREMENTS.html
+++ b/GOEDE REQUIREMENTS.html
@@ -398,11 +398,11 @@ aan de statistieken in het account.
 	</tr>
 	<tr>
 		<td><strong>Description:</strong></td>
-		<td colspan="5">Als iemand gebruik wil maken van het platform moet diegene in zijn account inloggen dmv gebruikersnaam en wachtwoord.</td>
+		<td colspan="5"> Een meerijder kan een rit aanvragen door een oppik locatie en een aankomsttijd door te geven. Hierna wordt een mogelijke match gemaakt met een chaufeur en kan je een verzoek doen om mee te rijden.</td>
 	</tr>
 	<tr>
 		<td><strong>Rationale:</strong></td>
-		<td colspan="5">Toegang krijgen tot je persoonlijke account.</td>
+		<td colspan="5">Meerijders koppelen aan chauffeurs</td>
 	</tr>
 	<tr>
 		<td><strong>Originator:</strong></td>
@@ -410,7 +410,77 @@ aan de statistieken in het account.
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5"> Een inlogknop op de homepagina waar je na het invullen van je gebruikersnaam en wachtwoord toegang hebt tot je account en het platform.
+		<td colspan="5">
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
+
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>12</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5"> Een chaufeur kan een rit van en naar de TU-wijk aanmaken van zijn beginlocatie met vertrek of aankomsttijd</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Beschikbare auto's in kaart brengen</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5">De route's van de verschillende auto's worden in kaart gebracht
+</td>
+	</tr>
+	<tr>
+		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">5</td> 
+		<td><strong>Customer Dissatisfaction:</strong></td><td colspan="2">5</td> 
+	</tr>
+	<tr>
+		<td><strong>Priority:</strong></td><td colspan="2">1</td>  
+		<td><strong>Conflicts:</strong></td><td colspan="2">...</td> 
+	</tr>
+	
+</table><br />
+<br />
+
+<table> 
+	<tr>
+		<td><strong>Requirement #:</strong></td><td>13</td> 
+		<td><strong>Requirement type:</strong></td><td>F</td> 
+		<td><strong>Event/Use Case #:</strong></td><td></td> 
+	</tr>
+	<tr>
+		<td><strong>Description:</strong></td>
+		<td colspan="5"> Een chaufeur krijgt een ritverzoek van een mogelijke meerijder en kan deze accepteren of afwijzen</td>
+	</tr>
+	<tr>
+		<td><strong>Rationale:</strong></td>
+		<td colspan="5">Ritten confimeren</td>
+	</tr>
+	<tr>
+		<td><strong>Originator:</strong></td>
+		<td colspan="5">...</td>
+	</tr>
+	<tr>
+		<td><strong>Fit Criterion:</strong></td>
+		<td colspan="5">De chaufeur krijgt een bericht van een meerijder met een ritverzoek op de website en een email. Daarna kan de chaufeur een acceptatie of weigering sturen
 </td>
 	</tr>
 	<tr>
