--- a/GOEDE REQUIREMENTS.html
+++ b/GOEDE REQUIREMENTS.html
@@ -192,7 +192,7 @@ een motivatie voor deze rating.</td>
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5">Werkend beoordelingssysteem, waarbij de gemiddelde sterrenrating
+		<td colspan="5">Het moet mogelijk zijn om een beoordeling te geven, waarbij de gemiddelde sterrenrating
 wordt toegevoegd aan het gebruikersaccount.</td>
 	</tr>
 	<tr>
@@ -304,7 +304,7 @@ geld kan worden gestort en ook geld kan worden teruggestort op je verbonden reke
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5"> Goede integratie met ideal en een beveiligd accountgebonden geld
+		<td colspan="5"> Integratie met ideal en een beveiligd accountgebonden geld
 systeem, waaruit geld ook weer gestort moet kunnen worden naar de rekening van de chaufeur.
 </td>
 	</tr>
