Update Use Cases van groep 10.html
Ik heb een tabel van use case 1 gemaakt, waarvan we de opmaak nog kunnen gebruiken bij de andere use cases als Willem de verbeteringen heeft toegevoegd

--- a/Use Cases van groep 10.html
+++ b/Use Cases van groep 10.html
@@ -4,20 +4,56 @@
 
 <h1>Use Case #1</h1>
 
-<p>Use case name and identifier: U1 - Account aanmaken 
-Objective: De volgende persoonsgegevens invoeren: auto, faculteit, leeftijd, geslacht, voorwaarden medepassagiers
-Priority: Belangrijk
-Source: Vanuit het de basis benodigdheden voor het systeem 
-Actors: alle gebruikers (chauffeurs en passagiers)
-Flow of events:
-Basic Flow - Een student of medewerker beslist dat hij/zij gebruik wilt maken van de app. Hij/zij moet dan beginnen met het aanmaken van een account, waarin verschillende gegevens moeten worden ingevoerd en de wallet moet worden aangemaakt. Vervolgens kan er gebruik gemaakt worden van de app.
-Alternative Flow - De gebruiker vult iets verkeerd in/ vergeet iets in te vullen en kan zijn account niet voltooiien. Na nog een keer invoeren, gaat het wel goed. 
-Exceptions - De app heeft een storing en de gebruiker kan tijdelijk geen account aanmaken. 
+<table>
+<tr>
+	<td><strong> Use case name and identifier: </td>
+	<td>U1 - Account aanmaken </td>
+</tr>
+<tr>
+	<td><strong>Objective: </td>
+	<td>De volgende persoonsgegevens invoeren: auto, faculteit, leeftijd, geslacht, voorwaarden medepassagiers </td>
+</tr>
+<tr>
+	<td><strong> Priority: </td>
+	<td>Belangrijk </td>
+</tr>
+<tr>
+	<td><strong> Source: </td>
+	<td>Vanuit het de basis benodigdheden voor het systeem </td>
+</tr>
+<tr>
+	<td><strong> Actors: </td>
+	<td>Chaufeurs en passagiers </td>
+</tr>
+<tr>
+	<td><strong> Flow of events: </td>
+	<td>
+		<ul>
+		<li><b>Basic flow:</b> Een student of medewerker beslist dat hij/zij gebruik wilt maken van de app. Hij/zij moet dan beginnen met het aanmaken van een account, waarin verschillende gegevens moeten worden ingevoerd en de wallet moet worden aangemaakt. Vervolgens kan er gebruik gemaakt worden van de app. </li>
+		<li><b>Alternative flow:</b> De gebruiker vult iets verkeerd in/ vergeet iets in te vullen en kan zijn account niet voltooien. Na nog een keer invoeren, gaat het wel goed.</li>
+		<li><b>Exceptions:</b> De app heeft een storing en de gebruiker kan tijdelijk geen account aanmaken.</li>
+		</ul>
+</tr>
+<tr>
+	<td><strong>Includes: </td>
+	<td>Niet relevant </td>
+</tr>
+<tr>
+	<td><strong>Preconditions:</td>
+	<td>Alle gebruikers van het platform moeten een account kunnen aanmaken. </td>
+</tr>
+<tr>
+	<td><strong>Post conditions: </td>
+	<td>Alle gebruikers van het platform moeten door middel van hun account een rit kunnen aanvragen en accepteren, hun wallet kunnen opwaarderen, geld kunnen ontvangen en een waardering achter kunnen laten . </td>
+</tr>
+<tr>
+	<td><strong>Notes/issues: </td>
+	<td>Het eerste wat app gebruikers moeten aangeven is hun spreektaal. Zo kan het verdere proces in deze taal worden uitgevoerd. </td>
+</tr>
+</table>
+ 
 
-Includes: niet relevant
-Preconditions: alle gebruikers van het platform moeten een account kunnen aanmaken.
-Post conditions: alle gebruikers van het platform moeten door middel van hun account een rit kunnen aanvragen en accepteren, hun wallet kunnen opwaarderen, geld kunnen ontvangen en een waardering achter kunnen laten . 
-Notes/issues: Het eerste wat app gebruikers moeten aangeven is hun spreektaal. Zo kan het verdere proces in deze taal worden uitgevoerd.</p>
+
 
 <h1>Use Case #2</h1>
 
