--- a/GOEDE REQUIREMENTS.html
+++ b/GOEDE REQUIREMENTS.html
@@ -120,7 +120,7 @@ gehouden met mogelijke uitbreidbaarheid naar andere universiteiten.</td>
 	</tr>
 	<tr>
 		<td><strong>Fit Criterion:</strong></td>
-		<td colspan="5">Een platform basis, waarop het platform makkelijk kan worden uitgebreid naar meerdere steden</td>
+		<td colspan="5">Het platform zit niet vast aan alleen de TUdelft</td>
 	</tr>
 	<tr>
 		<td><strong>Customer Satisfaction:</strong></td><td colspan="2">3</td> 
