stuctuur verder toegevoegd
structuur in html verder toegevoegd

--- a/Titelpagina.html
+++ b/Titelpagina.html
@@ -8,4 +8,10 @@
 	<li>Fleur Meijer (4686748)</li>
 </ul>
 
-<a href="GOEDE REQUIREMENTS.html">Informal requirements analysis:</a>
+<a href="GOEDE REQUIREMENTS.html">1. Informal requirements analysis</a>
+<p> <a href="GOEDE USE CASES.html">2. Requirements analysis with UML use cases</a></p>
+<p> <a href="interaction_interface design.html">3. Interaction/interface design</a></p>
+<p> <a href="architecture design.html">4. Architecture design</a></p
+<p> <a href="Database design with ERDs.html">5. Database design with ERDs</a></p
+
+
