--- a/Interaction_interface design.html
+++ b/Interaction_interface design.html
@@ -1,10 +1,15 @@
 <h1> Interaction/interface design </h1>
 
 <h2> Name: Login pagina </h2>
-<p> Requirement: 10 </p>
-<p> Use case: U9 </p>
+<p> <b> Requirement: 10 </b> </p>
+<p> <b> Use case: U9 </b> </p>
 
 <p> Op deze pagina moet de klant zijn gebruikersnaam en wachtwoord kunnen invoeren. Er moeten dus twee velden zijn: een voor de gebruikersnaam en een voor het wachtwoord. Bij het wachtwoord moet het woord verdoezeld worden, dit moet weergeven worden met zwarte puntjes. Er moet een inlogknop zijn die, wanneer deze wordt ingedrukt, de inlogprocedure initieert. </p> 
 <p> Als het inloggen is gelukt, wordt de klant doorgestuurd naar de homepage. Als het inloggen niet is gelukt, geeft het een foutbericht weer en wordt er teruggegaan naar de login pagina. De gebruiker moet op deze pagina de mogelijkheid krijgen om de website te bezoeken in het Engels of in het Nederland. Als de pagina in het Nederlands wordt weergeven, zal er een switch zijn naar de Engelse webpagina en vice versa. </p>
 <p> De gebruiker moet de mogelijkheid krijgen om zijn gebruikersnaam en wachtwoord te laten onthouden door de website. Er moet dus een selectievakje zijn om de gebruiker te onthouden: Keep me logged in/Houd mij ingelogd. </p>
 <p> Tot slot moet de gebruiker de mogelijkheid krijgen om zijn wachtwoord op te vragen als hij deze vergeten is (Forgot password/Wachtwoord vergeten), en de mogelijkheid om zich te registeren (New? Register here!/Nieuw? Registreer hier!). </p>
+
+<p> <b> SQL: </b> </p>
+
+
+<img src="Inloggen.PNG">
