--- a/Interaction_interface design.html
+++ b/Interaction_interface design.html
@@ -10,6 +10,9 @@
 <p> Tot slot moet de gebruiker de mogelijkheid krijgen om zijn wachtwoord op te vragen als hij deze vergeten is (Forgot password/Wachtwoord vergeten), en de mogelijkheid om zich te registeren (New? Register here!/Nieuw? Registreer hier!). </p>
 
 <p> <b> SQL: </b> </p>
-
+<p> SELECT g.accountID, g.voornaam, g.achternaam </p>
+<p> FROM Gebruiker AS g </P>
+<p> WHERE g.Gebruikersnaam = invoer gebruikersnaam (php) </>
+<p> AND g.Wachtwoord = invoer wachtwoord (php) </p>
 
 <img src="Inloggen.PNG">
