nog meer plaatjes toegevoegd
Html pagina met hyperlinks krijgt nu echt vorm!

--- a/Architecture design.html
+++ b/Architecture design.html
@@ -1,3 +1,5 @@
 <h1> Architecture design </h1>
 <h2> Swimlane diagram </h2>
 <img src= "Swimlane diagram.jpg">
+<h2> Class diagram </h2>
+<img src= "UML Class Diagram.jpg">
