--- a/Database design with ERDs.html
+++ b/Database design with ERDs.html
@@ -1,1 +1,5 @@
 <h1> Database design with ERDs </h1>
+<h2> ERD <h2>
+<img src= "ERD verbeterd.png">
+<h2> DB diagram <h2>
+<img src= "DBDiagramKlaar.png">
