Architecture design pagina af

--- a/Architecture design.html
+++ b/Architecture design.html
@@ -3,3 +3,14 @@
 <img src= "Swimlane diagram.jpg">
 <h2> Class diagram </h2>
 <img src= "UML Class Diagram.jpg">
+<h2> Sequence diagrams <h2>
+<h3> Sequence diagram U1 - Account aanmaken <h3>
+<img src= "SequenceU1.jpg">
+<h3> Sequence diagram U2 - Inzien besparingsstatistieken <h3>
+<img src= "SequenceU2.jpg">
+<h3> Sequence diagram U7 - Rating invoeren <h3>
+<img src= "SequenceU7.jpg">
+<h3> Sequence diagram U7 - Aternative flow rating invoeren<h3>
+<img src= "SequenceU72.jpg">
+<h3> Sequence diagram U9 - Rit aanmaken <h3>
+<img src= "SequenceU9.jpg">
